@@ -52,6 +52,11 @@ END
   opts.on('--isolate WORKSHEET', "Only performs translation and optimiation of that one worksheet. Useful for debugging an incorrect translation of a large worksheet") do |sheet|
     command.isolate = sheet
   end
+
+  opts.on('-d','--debug', "Does not perform final optimisations of spreadsheet, leaving the resulting code more similar to the original worksheet, but potentially slower") do |sheet|
+    command.should_inline_formulae_that_are_only_used_once = false
+    command.extract_repeated_parts_of_formulae = false
+  end
   
   opts.on("-h", "--help", "Show this message") do
     puts opts
